[package]
name = "runcycles"
version = "0.2.1"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "Rust client for the Cycles budget-management protocol — deterministic spend control for AI agents and LLM workflows"
readme = "README.md"
repository = "https://github.com/runcycles/cycles-client-rust"
homepage = "https://runcycles.io"
documentation = "https://docs.rs/runcycles"
keywords = ["cycles", "budget", "llm", "ai-agents", "cost-control"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
exclude = [".github/", "CLAUDE.md", "AUDIT.md", "tests/live_server_test.rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["rustls-tls"]
blocking = ["tokio/rt"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
bon = "3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "sync", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
